fixed welcome message (again), removed out of place css folder, deleted greeting.js since already in style.css

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -97,22 +97,21 @@ input[type="radio"] {
   background-color: #259db2;
 }
 
-.container {
-  margin-top: -110px;
-}
-
 header {
   top: 0;
 }
 
-#welcome {
-  font-size: 22pt;
-  text-align: center;
-  top: 110px;
+.container {
+  margin-top: 35px;
 }
 
-.message {
-  margin-top: 110px;
+#message {
+  text-align: center;
+  margin-top: 35px;
+}
+
+#welcome {
+  font-size: 20pt;
   text-align: center;
 }
 
